--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "lodash": "^4.17.21",
     "ol": "^10.6.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
